@@ -13,7 +13,7 @@ import blazed_grating, substacks, planarTE, planarTM, VCSEL, SpE, \
        degenerate, precision, infstack, taper, rods, slab, slab2, fw_bw, \
        TEM_field, grating2, polariton, gaussian, wg, dent, stack0, stack1, \
        stack2, degenerate2, grating3, sudbo, polariton2, degenerate3, \
-       degenerate4, backward, planar_VCSEL
+       degenerate4, backward, planar_VCSEL, shift
 
 alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite, 
        planarTE.suite, planarTM.suite, VCSEL.suite, SpE.suite, fw_bw.suite,
@@ -23,7 +23,7 @@ alltests = unittest.TestSuite((blazed_grating.suite, substacks.suite,
        TEM_field.suite, grating2.suite, polariton.suite, gaussian.suite,
        dent.suite, stack1.suite, field.suite, slab2.suite, stack2.suite,
        degenerate2.suite, grating3.suite, sudbo.suite, polariton2.suite,
-       degenerate3.suite, degenerate4.suite, backward.suite,
+       degenerate3.suite, degenerate4.suite, backward.suite, shift.suite,
        planar_VCSEL.suite))
 
 if __name__ == "__main__":
